# client-risk-guardian-pro

./: README.md
ai-engine/: Dockerfile  pyproject.toml
attached_assets/: Pasted--VIS-O-GERAL-DA-STACK-FECHADA-Frontend-Angular-Painel-G_1765732764787.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: InteractiveMap.css  InteractiveMap.tsx
client/src/components/layout/: Layout.tsx  Sidebar.tsx
client/src/lib/: mockData.ts
client/src/pages/: AuditLogs.tsx  Billing.tsx  Compliance.tsx  ContentList.tsx  Dashboard.tsx  Developer.tsx  Integrations.tsx  Placeholder.tsx  Settings.tsx  ViralityMap.tsx
