[project]
name = "ml-service"
version = "0.1.0"
description = "Explainable AI service for text analysis"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "aiohttp>=3.9.0",
    "tenacity>=8.2.0",
    "python-multipart>=0.0.6",
]

[tool.uv]
dev-dependencies = []
